--- a/src/styles.css
+++ b/src/styles.css
@@ -4,6 +4,13 @@
     background-color: none;
 }
 
+.action-bar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 5px;
+}
+
 .todo-item {
     display: flex;
     align-items: center;
@@ -62,7 +69,6 @@
 
 .searchbox-container {
     display: flex;
-    margin: 5px;
     align-items: center;
     border: 1px solid #e4e4e4;
     border-radius: 50px;
